多日预报图标根据日落日间显示不同的图标

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -89,7 +89,7 @@
                   <text>{{tools.formatDate(item.fxDate, "MM/DD")}}</text>
                 </view>
                 <view class="item-content">
-                  <image src="../../images/icons/weather/{{item.iconDay}}-fill.png" mode="aspectFit" class="icon" />
+                  <image src="../../images/icons/weather/{{tools.isNight(dayWeather[0].sunset) ? item.iconNight : item.iconDay}}-fill.png" mode="aspectFit" class="icon" />
                 </view>
                 <view class="item-content">
                   <text>{{item.text}}</text>
